--- a/index.html
+++ b/index.html
@@ -586,13 +586,13 @@
 
 </table>
 <!--<a href="https://clustrmaps.com/site/1bzxq" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg" /></a>-->
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg"></script>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
   </div>
 </div>
 
 <div id="footer">
   <div class="container">
-    The template is borrowed from from <a href="https://zxjwudi.github.io/xuejiaozhao/"> Xuejiao Zhao.</a>  <div class="foot-madeby">Last update: June 4 2024.</div>
+      <div class="foot-madeby">The template is borrowed from from <a href="https://zxjwudi.github.io/xuejiaozhao/"> Xuejiao Zhao.</a> Last update: June 4 2024.</div>
   </div>
 </div>
 
