--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div id="navbar">
   <div class="container">
-    <a href="./" class="nav-head">Haocong Rao</a>
+    <a href="https://haocongrao.github.io/" class="nav-head">Haocong Rao</a>
     <div class="nav-sep">&vert;</div>
     <a href="#publication" class="nav-item ">Publications</a>
       <div class="nav-sep">&vert;</div>
@@ -176,7 +176,7 @@
 	 <em>Arxiv Preprint</em><br>
      <a href="https://arxiv.org/abs/2405.13082">[Link]</a>
      <a href="https://github.com/Kali-Hac/AI4NDD-Survey">[Resources]</a>
-      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:pyQiJYbu3PgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGam3o:AFWwaeYAAAAAZmGcg3p1n0naJ3OA-ZyEzQ3rhZc&scisig=AFWwaeYAAAAAZmGcgwd3gxarwEQ8c5xugpkq5jY&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:pyQiJYbu3PgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGam3o:AFWwaeYAAAAAZmGcg3p1n0naJ3OA-ZyEzQ3rhZc&scisig=AFWwaeYAAAAAZmGcgwd3gxarwEQ8c5xugpkq5jY&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
         <p></p>
       </td>
     </tr>
@@ -195,7 +195,7 @@
 	 <em>Arxiv Preprint</em><br>
      <a href="https://arxiv.org/pdf/2401.15296">[Link]</a>
      <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
-      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
         <p></p>
       </td>
     </tr>
@@ -215,7 +215,7 @@
      <a href="https://arxiv.org/pdf/2307.12917">[Link]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Code]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Data]</a>
-     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:VpPgrO5jm88J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbLOM:AFWwaeYAAAAAZmGdNOP5g9qEkspEuUxxemVLblc&scisig=AFWwaeYAAAAAZmGdNCqTybI_Ue-7bRdZZGFhiE8&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:VpPgrO5jm88J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbLOM:AFWwaeYAAAAAZmGdNOP5g9qEkspEuUxxemVLblc&scisig=AFWwaeYAAAAAZmGdNCqTybI_Ue-7bRdZZGFhiE8&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
         <p></p>
       </td>
     </tr>
@@ -235,7 +235,7 @@
      <em><strong>EMNLP 2023</strong> (Findings)</em><br>
      <a href="https://arxiv.org/abs/2303.01248">[Link]</a>
      <a href="https://github.com/Kali-Hac/ChatGPT-MBTI">[Code]</a>
-     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:IG7yxaVDZHEJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbfVM:AFWwaeYAAAAAZmGdZVPdpjPibYvchnMoHVAslh0&scisig=AFWwaeYAAAAAZmGdZRAOMjDcYOtqgtrfkez4D10&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:IG7yxaVDZHEJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbfVM:AFWwaeYAAAAAZmGdZVPdpjPibYvchnMoHVAslh0&scisig=AFWwaeYAAAAAZmGdZRAOMjDcYOtqgtrfkez4D10&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <p></p>
       </td>
     </tr>
@@ -254,7 +254,7 @@
 		<a href="http://openaccess.thecvf.com/content/CVPR2023/papers/Rao_TranSG_Transformer-Based_Skeleton_Graph_Prototype_Contrastive_Learning_With_Structure-Trajectory_Prompted_CVPR_2023_paper.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/TranSG">[Code]</a>
          <a href="https://github.com/Kali-Hac/TranSG">[Data]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:eAZuvWdZxCUJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaML0:AFWwaeYAAAAAZmGcKL1lVaz0kzqVHOMov2pahdo&scisig=AFWwaeYAAAAAZmGcKHNaXcsdfKLcnuk8ZOTUVjA&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:eAZuvWdZxCUJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaML0:AFWwaeYAAAAAZmGcKL1lVaz0kzqVHOMov2pahdo&scisig=AFWwaeYAAAAAZmGcKHNaXcsdfKLcnuk8ZOTUVjA&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -273,7 +273,7 @@
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
      <em>IEEE Signal Processing Letters 2022</em><br>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9913633">[Link]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:i5ogNWi3beIJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbhs0:AFWwaeYAAAAAZmGdns18Ej7434bRkbMW_u7yHcQ&scisig=AFWwaeYAAAAAZmGdnir1gmBgmCfV1Zftwk1FauM&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:i5ogNWi3beIJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbhs0:AFWwaeYAAAAAZmGdns18Ej7434bRkbMW_u7yHcQ&scisig=AFWwaeYAAAAAZmGdnir1gmBgmCfV1Zftwk1FauM&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -293,7 +293,7 @@
 		<a href="https://www.ijcai.org/proceedings/2022/0180.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/SimMC">[Code]</a>
          <a href="https://github.com/Kali-Hac/SimMC">[Data]</a>
-         <a href="https://www.ijcai.org/proceedings/2022/bibtex/0180">[Bibtex]</a>
+<!--         <a href="https://www.ijcai.org/proceedings/2022/bibtex/0180">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -313,7 +313,7 @@
 		<a href="https://arxiv.org/pdf/2208.11814">[Link]</a>
          <a href="https://github.com/Kali-Hac/SPC-MGR">[Code]</a>
          <a href="https://github.com/Kali-Hac/SPC-MGR">[Data]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:so6Zk3uGItAJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGZ0Z4:AFWwaeYAAAAAZmGfyZ7YmpQwfXuz3I-fHW24zdU&scisig=AFWwaeYAAAAAZmGfyUYY0bDksUsHA7hRViDC9xQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:so6Zk3uGItAJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGZ0Z4:AFWwaeYAAAAAZmGfyZ7YmpQwfXuz3I-fHW24zdU&scisig=AFWwaeYAAAAAZmGfyUYY0bDksUsHA7hRViDC9xQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -333,7 +333,7 @@
 		<a href="https://arxiv.org/abs/2107.01903">[Link]</a>
          <a href="https://github.com/Kali-Hac/SM-SGE">[Code]</a>
          <a href="https://github.com/Kali-Hac/SM-SGE">[Data]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:qN64Q6R5ja4J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbzCY:AFWwaeYAAAAAZmGd1CZvM8Xa4vXvt-VQ4P8-fRw&scisig=AFWwaeYAAAAAZmGd1OYqax0LhxsFItU5os2Wn1U&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:qN64Q6R5ja4J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbzCY:AFWwaeYAAAAAZmGd1CZvM8Xa4vXvt-VQ4P8-fRw&scisig=AFWwaeYAAAAAZmGd1OYqax0LhxsFItU5os2Wn1U&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -352,7 +352,7 @@
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Zf_RPTCA-UkJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGb7_I:AFWwaeYAAAAAZmGd9_K5yy7DCUVHzLBBucNgIWo&scisig=AFWwaeYAAAAAZmGd94QF2WKAWRr4n7mOyQsb_PQ&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -371,7 +371,7 @@
 		<a href="https://www.ijcai.org/proceedings/2021/0135.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/MG-SCR">[Code]</a>
          <a href="https://github.com/Kali-Hac/MG-SCR">[Data]</a>
-         <a href="https://www.ijcai.org/proceedings/2021/bibtex/0135">[Bibtex]</a>
+<!--         <a href="https://www.ijcai.org/proceedings/2021/bibtex/0135">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -390,7 +390,7 @@
 		<a href="https://www.sciencedirect.com/science/article/pii/S0020025521003443">[Link]</a>
          <a href="https://github.com/Kali-Hac/AS-CAL">[Code]</a>
          <a href="https://github.com/Kali-Hac/AS-CAL">[Data]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Jl-F5er8t8cJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYMd0:AFWwaeYAAAAAZmGeKd0N_evvyeshZYJBd8aEOsE&scisig=AFWwaeYAAAAAZmGeKUg_G1pArSptfBGJAPzn1AA&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Jl-F5er8t8cJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYMd0:AFWwaeYAAAAAZmGeKd0N_evvyeshZYJBd8aEOsE&scisig=AFWwaeYAAAAAZmGeKUg_G1pArSptfBGJAPzn1AA&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -409,7 +409,7 @@
 		<a href="https://ieeexplore.ieee.org/abstract/document/9623511">[Link]</a>
          <a href="https://github.com/Mikexu007/PCRP">[Code]</a>
          <a href="https://github.com/Mikexu007/PCRP">[Data]</a>
-         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:_kGdRKnLaPgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYVjU:AFWwaeYAAAAAZmGeTjVYz-uL7YPnb0fQR7bJN7k&scisig=AFWwaeYAAAAAZmGeTrgT1lA7W7T_EBN-GSmoudo&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:_kGdRKnLaPgJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYVjU:AFWwaeYAAAAAZmGeTjVYz-uL7YPnb0fQR7bJN7k&scisig=AFWwaeYAAAAAZmGeTrgT1lA7W7T_EBN-GSmoudo&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
       </td>
@@ -429,7 +429,7 @@
      <em>IEEE Internet of Things Journal (<strong>IoTJ</strong>) 2020</em><br>
      <a href="https://ieeexplore.ieee.org/document/9286840">[Link]</a>
      <a href="https://github.com/Mikexu007/AMCGC-LSTM">[Code]</a>
-     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:gLVTmfTtiP0J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYd6M:AFWwaeYAAAAAZmGeb6NvtvtFSp_poN7dA3RMnGk&scisig=AFWwaeYAAAAAZmGebwIbp0yvit_AhZNwjhg_qPo&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>
+<!--     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:gLVTmfTtiP0J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYd6M:AFWwaeYAAAAAZmGeb6NvtvtFSp_poN7dA3RMnGk&scisig=AFWwaeYAAAAAZmGebwIbp0yvit_AhZNwjhg_qPo&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
      <p></p>
       </td>
     </tr>
@@ -447,7 +447,7 @@
      <a href="https://www.ijcai.org/proceedings/2020/0125.pdf">[Link]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Code]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Data]</a>
-     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:lpWaw3IqRLYJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYs44:AFWwaeYAAAAAZmGeq44MTMwRDMT3w-x0zpoJoLE&scisig=AFWwaeYAAAAAZmGeq2lCAd7m8RGhDo2TfT5dN6M&scisf=4&ct=citation&cd=-1&hl=zh-CN&scfhb=1">[Bibtex]</a>
+<!--     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:lpWaw3IqRLYJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYs44:AFWwaeYAAAAAZmGeq44MTMwRDMT3w-x0zpoJoLE&scisig=AFWwaeYAAAAAZmGeq2lCAd7m8RGhDo2TfT5dN6M&scisf=4&ct=citation&cd=-1&hl=zh-CN&scfhb=1">[Bibtex]</a>-->
      <p></p>
       </td>
     </tr>
@@ -592,7 +592,7 @@
 
 <div id="footer">
   <div class="container">
-      <div class="foot-madeby">The template is borrowed from from <a href="https://zxjwudi.github.io/xuejiaozhao/"> Xuejiao Zhao.</a> Last update: June 4 2024.</div>
+      <div class="foot-madeby">The template is borrowed from from <a href="https://zxjwudi.github.io/xuejiaozhao/"> Xuejiao Zhao.</a> Last update: June 6 2024.</div>
   </div>
 </div>
 
