--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 
 <p>
       Before joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
-      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a>.
+      where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm">Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a>.
       I obtained my B.Eng. degree with Outstanding Theis Award from South China University of Technology (SCUT).
 </p>
-      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>
+<!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
 </strong>
 <tbody><tr>
         <td width="100%" valign="middle">
@@ -119,24 +119,24 @@
          <li> <strongsmall>[2024/05]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper
             "A Survey of Artificial Intelligence in Gait-Based Neurodegenerative Disease Diagnosis" is released!</smalll><br></li>
           <li> <strongsmall>[2024/03]</strongsmall> &nbsp;&nbsp;<smalll>We are organizing the
-           <a href="https://ijcai-aiaa-2024.org/">The 4th AI for Ageless Aging Workshop (AIAA) workshop</a>,
+              <EM><a href="https://ijcai-aiaa-2024.org/">The 4th AI for Ageless Aging Workshop (AIAA) workshop</a></EM>,
            conjunction with
-           <a href="https://ijcai24.org/">IJCAI 2024</a>, now calling for papers!
+              <EM><a href="https://ijcai24.org/">IJCAI 2024</a></EM>, now calling for papers!
          </smalll><br></li>
             <li> <strongsmall>[2024/01]</strongsmall> &nbsp;&nbsp;<smalll>One survey paper "A Survey on 3D Skeleton Based Person Re-Identification: Approaches, Designs,
                 Challenges, and Future Directions" is released!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of EMNLP 2023</em>!</smalll><br></li>
-          <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded Outstanding Contribution Award of <em>European Alliance for Innovation
+            <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
             <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>International Journal of Computer Vision (IJCV)!</em>.</smalll><br></li>
-            <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong>ESI Highly Cited Paper</strong></em>!</smalll><br></li>
+            <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>CVPR 2023</em>!</smalll><br></li>
 <!--            <li> <strongsmall>[2022/12]</strongsmall> &nbsp;&nbsp;<smalll>Invited to serve as a Program Committee member of <em>IJCAI 2023</em>!</smalll><br></li>-->
             <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Signal Processing Letters</em>!</smalll><br></li>
-          <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong>Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
-            <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as Top Reviewer (3%) and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
+          <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
+            <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2022 (Oral)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong>AI Singapore (AISG) Phd Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) Phd Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Multimedia (TMM)</em>!</smalll><br></li>
           <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>ACMMM 2021</em>!</smalll><br></li>
             <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>!</smalll><br></li>
@@ -501,7 +501,7 @@
               <li> <stronghuge><STRONG>2nd Place</STRONG> in South China Hackathon of Microsoft, 2018 </stronghuge><br></li>
               <li> <stronghuge><STRONG>1st Place</STRONG> in Wenshi Software Design Contest of SCUT, 2018</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Student Association</STRONG> (Leadership) of SCUT SSE, 2017</stronghuge><br></li>
-              <li> <stronghuge><STRONG>1st Prize</STRONG> in Creative Programming Design Contest of SCUT, 2016</stronghuge><br></li>
+              <li> <stronghuge><STRONG>1st Prize</STRONG> in Creative Programming Design Contest of SCUT SSE, 2016</stronghuge><br></li>
               <p></p>
           </li></div>
         </td>
@@ -592,7 +592,7 @@
 
 <div id="footer">
   <div class="container">
-      <div class="foot-madeby">The template is borrowed from from <a href="https://zxjwudi.github.io/xuejiaozhao/"> Xuejiao Zhao.</a> Last update: June 6 2024.</div>
+      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/"> Dr. Xuejiao Zhao.</a> Last update: June 6 2024.</div>
   </div>
 </div>
 
