--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
               <strong>Running and Gymming</strong>: I enjoy running and often participate in 10km+ level races including Singapore Marathon 2023.
               I regularly go to gym twice a week.
               <br>
-               <strong>Military Chess (A Chinese tactical game)</strong>：My most playing chess game during my high school. I got the level of
+               <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school. I got the level of
               deputy brigade commander with about 1000 score.
               <br>
               <strong>Billards</strong>: I like playing billards and have participated in some inter-university competitions.
