--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
  I am Haocong Rao (饶浩聪), a final-year PhD candidate supported by
    <a href="https://aisingapore.org/research/phd-fellowship-programme/">AI Singapore (AISG) PhD Fellowship</a> and supervised by <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Prof. Chunyan Miao</a> and <a href="https://ece.ubc.ca/cyril-leung/">Prof. Cyril Leung</a>,
     at the <a href="https://www.ntu.edu.sg/lily">LILY Research Centre</a> and College of Computing and Data Science (CCDS), Nanyang Technological University (NTU), Singapore.
-    My research interests include General Pattern Recognition, Skeleton-Based Person Re-Identification, Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
+    My research interests include General Pattern Recognition, Skeleton-Based Person Re-Identification (SRID), Self-Supervised/Unsupervised learning, Interdisciplinary AI (<em>e.g.</em>, LLMs Application, AI for Healthcare).
 </p>
 
 <p>
@@ -192,7 +192,7 @@
        By <strong>Haocong Rao</a></strong>,
        <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
 
-	 <em>Arxiv Preprint</em><br>
+          <em>Arxiv Preprint</em><font color="#6495ed"> [First SRID Survey]</font><br>
      <a href="https://arxiv.org/pdf/2401.15296">[Link]</a>
      <a href="https://github.com/Kali-Hac/3D-skeleton-based-person-re-ID-survey">[Resources]</a>
 <!--      <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:B-L8WFJb_b8J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGaquw:AFWwaeYAAAAAZmGcsuztIpWW1VDG8RiO_e3jOmE&scisig=AFWwaeYAAAAAZmGcsmOdDqGpNho4lBC1twerYq0&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
@@ -211,7 +211,7 @@
        By <strong>Haocong Rao</strong>,
            <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Cyril Leung</a>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-     <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2023</em><br>
+          <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2023</em> <font color="#6495ed">[First SRID Article in IJCV]</font><br>
      <a href="https://arxiv.org/pdf/2307.12917">[Link]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Code]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Data]</a>
@@ -250,7 +250,7 @@
 	 <strong>TranSG: Transformer-Based Skeleton Graph Prototype Contrastive Learning with Structure-Trajectory Prompted Reconstruction for Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao</strong>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-     <em><strong>CVPR 2023</strong></em><br>
+     <em><strong>CVPR 2023</strong></em> <font color="#6495ed">[First SRID Paper in CVPR]</font><br>
 		<a href="http://openaccess.thecvf.com/content/CVPR2023/papers/Rao_TranSG_Transformer-Based_Skeleton_Graph_Prototype_Contrastive_Learning_With_Structure-Trajectory_Prompted_CVPR_2023_paper.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/TranSG">[Code]</a>
          <a href="https://github.com/Kali-Hac/TranSG">[Data]</a>
@@ -329,7 +329,7 @@
       <td valign="top" width="75%">
 	 <strong>SM-SGE: A Self-Supervised Multi-Scale Skeleton Graph Encoding Framework for Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao</strong>, Xiping Hu, Jun Cheng, Bin Hu <br>
-     <em><strong>ACMMM 2021</strong></em><br>
+     <em><strong>ACMMM 2021</strong></em> <font color="#6495ed">[First SRID Paper in ACMMM]</font><br>
 		<a href="https://arxiv.org/abs/2107.01903">[Link]</a>
          <a href="https://github.com/Kali-Hac/SM-SGE">[Code]</a>
          <a href="https://github.com/Kali-Hac/SM-SGE">[Data]</a>
@@ -348,7 +348,7 @@
       <td valign="top" width="75%">
 	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 (Extension of IJCAI 2020 Paper)</em><br>
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 (Extension of IJCAI 2020 Paper)</em> <font color="#6495ed">[First SRID Article in TPAMI]</font><br>
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
@@ -443,7 +443,7 @@
       <td valign="top" width="75%">
       <strong>Self-Supervised Gait Encoding with Locality-Aware Attention for Person Re-Identification</strong><br>
           By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
-     <em><strong>IJCAI 2020</strong></em><br>
+     <em><strong>IJCAI 2020</strong></em> <font color="#6495ed">[First SRID Paper in IJCAI]</font><br>
      <a href="https://www.ijcai.org/proceedings/2020/0125.pdf">[Link]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Code]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Data]</a>
