--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <a href="#publication" class="nav-item ">Publications</a>
       <div class="nav-sep">&vert;</div>
     <a href="https://github.com/Kali-Hac" class="nav-item ">Resources</a>
-        <div class="nav-sep">&vert;</div>
-       <a href="https://drive.google.com/file/d/1gjrZ01B_DY9OhD874b_qk-1qWr4K7lBG/view?usp=sharing" class="nav-item ">CV</a>
-<!--    <a href="./files/CV.pdf" class="nav-item nav-right">CV</a>-->
+<!--        <div class="nav-sep">&vert;</div>-->
+<!--       <a href="https://drive.google.com/file/d/1gjrZ01B_DY9OhD874b_qk-1qWr4K7lBG/view?usp=sharing" class="nav-item ">CV</a>-->
+   <a href="https://drive.google.com/file/d/1gjrZ01B_DY9OhD874b_qk-1qWr4K7lBG/view?usp=sharing" class="nav-item nav-right">CV</a>
   </div>
 </div>
 
@@ -108,7 +108,7 @@
 <p>
       Before joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
       where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm">Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a>.
-      I obtained my B.Eng. degree with Outstanding Theis Award from South China University of Technology (SCUT).
+      I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
 <!--      <em><stronghuge><font color="#a82e2e">I am on the 2024-2025 academic job market. </font></stronghuge></em> <br>-->
 </strong>
@@ -532,8 +532,8 @@
 <!--          <br>-->
           <li> Connect and invite various scholars for academic talks:
 <!--          <ul>--><br>
-               &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">PhD Student Lecture Series (SLS)</a>:CCDS (SCSE) PhD Students, AI Singapore (AISG) PhD Fellows<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Graduate Chat Series</a>:NTU CCDS (SCSE) Outstanding PhD Thesis Awardees<br>
+               &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">PhD Student Lecture Series (SLS)</a>: CCDS (SCSE) PhD Students, AI Singapore (AISG) PhD Fellows<br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Graduate Chat Series</a>: NTU CCDS (SCSE) Outstanding PhD Thesis Awardees<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp Invited Talk Series: NTU Predidential Postdoctoral Fellows, NTU Nanyang Assistant Professors, <EM>etc</EM>.
 <!--          </ul>-->
            <li> Manage and promote CCDS (SCSE) social media publicity (<a href="https://www.instagram.com/ntu.scse.gsc/">Instgram (@ntu.scse.gsc)</a>,
