--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 
 </table>
 <!--<a href="https://clustrmaps.com/site/1bzxq" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg" /></a>-->
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg"></script>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
   </div>
 </div>
 
