--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       By <strong>Haocong Rao</strong>,
            <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Cyril Leung</a>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-     <em><strong>EMNLP 2023</strong> (Findings)</em><br>
+     <em>2023 Conference on Empirical Methods in Natural Language Processing,<strong> EMNLP 2023</strong> (Findings)</em><br>
      <a href="https://arxiv.org/abs/2303.01248">[Link]</a>
      <a href="https://github.com/Kali-Hac/ChatGPT-MBTI">[Code]</a>
 <!--     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:IG7yxaVDZHEJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbfVM:AFWwaeYAAAAAZmGdZVPdpjPibYvchnMoHVAslh0&scisig=AFWwaeYAAAAAZmGdZRAOMjDcYOtqgtrfkez4D10&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
@@ -250,7 +250,7 @@
 	 <strong>TranSG: Transformer-Based Skeleton Graph Prototype Contrastive Learning with Structure-Trajectory Prompted Reconstruction for Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao</strong>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-     <em><strong>CVPR 2023</strong></em> <font color="#6495ed">[First SRID Paper in CVPR]</font><br>
+     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition, <strong>CVPR 2023</strong></em> <font color="#6495ed">[First SRID Paper in CVPR]</font><br>
 		<a href="http://openaccess.thecvf.com/content/CVPR2023/papers/Rao_TranSG_Transformer-Based_Skeleton_Graph_Prototype_Contrastive_Learning_With_Structure-Trajectory_Prompted_CVPR_2023_paper.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/TranSG">[Code]</a>
          <a href="https://github.com/Kali-Hac/TranSG">[Data]</a>
@@ -289,7 +289,7 @@
 	 <strong>SimMC: Simple Masked Contrastive Learning of Skeleton Representations for Unsupervised Person Re-Identification</strong><br>
 	By <strong>Haocong Rao</strong>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-     <em><strong>IJCAI 2022</strong></em><br>
+          <em>31st International Joint Conference on Artificial Intelligence, <strong>IJCAI 2022 <font color="red">(Oral, Accptance Rate: 14.9%)</font></strong></em><br>
 		<a href="https://www.ijcai.org/proceedings/2022/0180.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/SimMC">[Code]</a>
          <a href="https://github.com/Kali-Hac/SimMC">[Data]</a>
@@ -329,7 +329,7 @@
       <td valign="top" width="75%">
 	 <strong>SM-SGE: A Self-Supervised Multi-Scale Skeleton Graph Encoding Framework for Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao</strong>, Xiping Hu, Jun Cheng, Bin Hu <br>
-     <em><strong>ACMMM 2021</strong></em> <font color="#6495ed">[First SRID Paper in ACMMM]</font><br>
+     <em>29th ACM International Conference on Multimedia, <strong>ACMMM 2021</strong></em> <font color="#6495ed">[First SRID Paper in ACMMM]</font><br>
 		<a href="https://arxiv.org/abs/2107.01903">[Link]</a>
          <a href="https://github.com/Kali-Hac/SM-SGE">[Code]</a>
          <a href="https://github.com/Kali-Hac/SM-SGE">[Data]</a>
@@ -348,7 +348,8 @@
       <td valign="top" width="75%">
 	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 (Extension of IJCAI 2020 Paper)</em> <font color="#6495ed">[First SRID Article in TPAMI]</font><br>
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 (Extension of IJCAI 2020 Paper)
+     </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Data]</a>
@@ -367,7 +368,7 @@
       <td valign="top" width="75%">
 	 <strong>Multi-level Graph Encoding with Structural-Collaborative Relation Learning for Skeleton-Based Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao</strong>, Shihao Xu, Xiping Hu, Jun Cheng, Bin Hu <br>
-     <em><strong>IJCAI 2021</strong></em><br>
+     <em>30th International Joint Conference on Artificial Intelligence, <strong>IJCAI 2021 <font color="red">(Oral, Accptance Rate: 13.9%)</font></strong></em><br>
 		<a href="https://www.ijcai.org/proceedings/2021/0135.pdf">[Link]</a>
          <a href="https://github.com/Kali-Hac/MG-SCR">[Code]</a>
          <a href="https://github.com/Kali-Hac/MG-SCR">[Data]</a>
@@ -443,7 +444,7 @@
       <td valign="top" width="75%">
       <strong>Self-Supervised Gait Encoding with Locality-Aware Attention for Person Re-Identification</strong><br>
           By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
-     <em><strong>IJCAI 2020</strong></em> <font color="#6495ed">[First SRID Paper in IJCAI]</font><br>
+     <em>29th International Joint Conference on Artificial Intelligence, <strong>IJCAI 2020 <font color="red">(Oral, Accptance Rate: 12.6%)</font></strong></em> <font color="#6495ed">[First SRID Paper in IJCAI]</font><br>
      <a href="https://www.ijcai.org/proceedings/2020/0125.pdf">[Link]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Code]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Data]</a>
@@ -508,13 +509,14 @@
       </tr>
 </tbody>
 
-
+<div id="leadership">
 <tbody><tr>
 <td width="100%" valign="middle">
   <h2>Leadership Experiences</h2>
 </td>
 </tr>
 </tbody>
+</div>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
@@ -543,6 +545,7 @@
     </tr>
    </tbody>
 </table>
+
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
