--- a/index.html
+++ b/index.html
@@ -538,8 +538,9 @@
               &nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos">Graduate Chat Series</a>: NTU CCDS (SCSE) Outstanding PhD Thesis Awardees<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp Invited Talk Series: NTU Predidential Postdoctoral Fellows, NTU Nanyang Assistant Professors, <EM>etc</EM>.
 <!--          </ul>-->
-           <li> Manage and promote CCDS (SCSE) social media publicity (<a href="https://www.instagram.com/ntu.scse.gsc/">Instgram (@ntu.scse.gsc)</a>,
-          <a href="https://x.com/SCSE_GSC">Twitter (@SCSE_GSC)</a>, Wechat (@NTU SCSE PhD), <EM>etc</EM>.), which has linked and served more than 270 NTU CCDS (SCSE) PhDs. <br></li>
+           <li> Manage and promote CCDS (SCSE) social media publicity (<a href="https://www.youtube.com/@scse-gscnanyangtechnologic8474/videos/">Youtube (@SCSE-GSC)</a>,
+          <a href="https://www.instagram.com/ntu.scse.gsc/">Instagram (@ntu.scse.gsc)</a>, <a href="https://x.com/SCSE_GSC">Twitter (@SCSE_GSC)</a>, Wechat (@NTU SCSE PhD), <EM>etc</EM>.),
+          which has linked and served more than 270 NTU CCDS (SCSE) PhDs. <br></li>
         <p></p>
       </li></td>
     </tr>
