--- a/index.html
+++ b/index.html
@@ -462,7 +462,9 @@
       </p>
            <li> IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), Reviewer </li>
            <li> International Journal of Computer Vision (IJCV), Reviewer </li>
+          <li> IEEE Transactions on Industrial Informatics (TII), Reviewer </li>
            <li> IEEE Transactions on Affective Computing (TAC), Reviewer </li>
+          <li> IEEE Journal of Biomedical and Health Informatics (JBHI), Reviewer </li>
            <li> IEEE Transactions on Multimedia (TMM), Reviewer </li>
            <li> Artificial Intelligence Review, Reviewer </li>
            <li> Expert Systems with Applications, Reviewer </li>
