--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a href="https://github.com/Kali-Hac" class="nav-item ">Resources</a>
 <!--        <div class="nav-sep">&vert;</div>-->
 <!--       <a href="https://drive.google.com/file/d/1gjrZ01B_DY9OhD874b_qk-1qWr4K7lBG/view?usp=sharing" class="nav-item ">CV</a>-->
-   <a href="https://drive.google.com/file/d/1gjrZ01B_DY9OhD874b_qk-1qWr4K7lBG/view?usp=sharing" class="nav-item nav-right">CV</a>
+   <a href="https://drive.google.com/file/d/1swZvrYVLowbL_bxEYtCivePeDgQgrSyU/view?usp=drive_link" class="nav-item nav-right">CV</a>
   </div>
 </div>
 
@@ -154,7 +154,7 @@
 <tbody><tr>
     <div id="publication">
         <td width="100%" valign="middle">
-         <h2>Selective Publications <a href="https://scholar.google.com.sg/citations?user=JkT65uQAAAAJ&hl=zh-CN&oi=ao" style="font-size:22px;">[Google Scholar]</a>
+         <h2>Selective Articles <a href="https://scholar.google.com.sg/citations?user=JkT65uQAAAAJ&hl=zh-CN&oi=ao" style="font-size:22px;">[Google Scholar]</a>
               <a href="https://www.researchgate.net/profile/Haocong_Rao2" style="font-size:22px;">[ResearchGate]</a></h2>
         </td>
     </div>
