--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
       </td>
       <td valign="top" width="75%">
       <strong>Self-Supervised Gait Encoding with Locality-Aware Attention for Person Re-Identification</strong><br>
-          By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
+          By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Huang Da, Jun Cheng, Bin Hu. (* Co-First Author)<br>
      <em>29th International Joint Conference on Artificial Intelligence, <strong>IJCAI 2020 <font color="red">(Oral, Accptance Rate: 12.6%)</font></strong></em> <font color="#6495ed">[First SRID Paper in IJCAI]</font><br>
      <a href="https://www.ijcai.org/proceedings/2020/0125.pdf">[Link]</a>
      <a href="https://github.com/Kali-Hac/SGE-LA">[Code]</a>
