--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
               <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
           <li> Co-organizer and PC Member of
               <a href="https://zxjwudi.github.io/aiaa2023.github.io/">the 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
-          <li> Co-organizer and PC Member of
+          <li> Co-Host, Co-Organizer, and PC Member of
               <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
 <!--          <li> "xxx", AI Time, 2021.10 &nbsp;<a href="https://www.bilibili.com/video/BV1qP4y1b7us?spm_id_from=333.999.0.0">[Video]</a><br></li>-->
           <br>
@@ -592,13 +592,12 @@
 
 </table>
 <!--<a href="https://clustrmaps.com/site/1bzxq" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg" /></a>-->
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
-  </div>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg"></script>
 </div>
 
 <div id="footer">
   <div class="container">
-      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/"> Dr. Xuejiao Zhao.</a> Last update: June 6 2024.</div>
+      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/"> Dr. Xuejiao Zhao.</a> Last update: 12 June 2024.</div>
   </div>
 </div>
 
