--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
            <li> Expert Systems with Applications, Reviewer </li>
            <li> Frontiers in Computational Neuroscience, Editorial Board Member</li>
           <li> PC Member of <EM>IJCAI</EM>, 2022, 2023, 2024 <br></li>
-          <li> Co-organizer and PC Member of
+          <li> Co-Organizer and PC Member of
               <a href="https://ijcai-aiaa-2024.org/">the 4th AI for Ageless Aging Workshop</a> @<EM>IJCAI 2024</EM><br></li>
-          <li> Co-organizer and PC Member of
+          <li> Co-Organizer and PC Member of
               <a href="https://zxjwudi.github.io/aiaa2023.github.io/">the 3rd AI for Ageless Aging Workshop</a> @<EM>IJCAI 2023</EM><br></li>
           <li> Co-Host, Co-Organizer, and PC Member of
               <a href="https://zxjwudi.github.io/aif2022.github.io/">the 2nd AI for Cognitive and Physical Frailty Seminar</a> @<EM>IJCAI 2022</EM><br></li>
@@ -592,7 +592,7 @@
 
 </table>
 <!--<a href="https://clustrmaps.com/site/1bzxq" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg" /></a>-->
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg"></script>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=nb8WgzFOb-OXHK8yfVHTflus9_ERzuTcAVldtBvX_eg&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353"></script>
 </div>
 
 <div id="footer">
