--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 <h1>Haocong Rao</h1>
     <p><strong>PhD Candidate, AI Singapore PhD Fellow</strong></p>
     <p><strong>LILY Research Centre, Nanyang Technological University</strong></p>
-<!--  <p><strong>Division of Robotics, Perception and Learning, KTH Royal Institute of Technology</p>-->
-
+	
 <div class="intro-contact">
 <table>
 <tr class="contact-row">
@@ -106,7 +105,7 @@
 </p>
 
 <p>
-      Before joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
+      Prior to joining NTU, I was a research assistant at the Shenzhen Institutes of Advanced Technology (SIAT), Chinese Academy of Science,
       where my supervisors and academic mentors were <a href="https://smt.bit.edu.cn/szdw/jsml/bssds/a28d1679c3ba43ae931471d721f28e31.htm">Prof. Xiping Hu</a>, <a href="https://www.suat-sz.edu.cn/info/1150/1933.htm">Prof. Jun Cheng</a>, <a href="https://scholar.google.com/citations?user=5kcgY8MAAAAJ&hl=zh-CN">Prof. Bin Hu</a>, and <a href="https://ece.ubc.ca/victor-leung/">Prof. Victor C.M. Leung</a>.
       I obtained my B.Eng. degree with Outstanding Thesis Award from South China University of Technology (SCUT).
 </p>
@@ -597,7 +596,7 @@
 
 <div id="footer">
   <div class="container">
-      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/"> Dr. Xuejiao Zhao.</a> Last update: 12 June 2024.</div>
+      <div class="foot-madeby">The template is shared by <a href="https://zxjwudi.github.io/xuejiaozhao/"> Dr. Xuejiao Zhao.</a> Last update: 17 June 2024.</div>
   </div>
 </div>
 
