--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <h1>Haocong Rao</h1>
     <p><strong>PhD Candidate, AI Singapore PhD Fellow</strong></p>
     <p><strong>LILY Research Centre, Nanyang Technological University</strong></p>
-	
+
 <div class="intro-contact">
 <table>
 <tr class="contact-row">
@@ -127,22 +127,23 @@
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper (LLMs for Psychology) is accepted by <em>Findings of EMNLP 2023</em>!</smalll><br></li>
             <li> <strongsmall>[2023/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Outstanding Contribution Award</strong> of <em>European Alliance for Innovation
 (EAI), International Conference on Heterogeneous Networking for Quality, Reliability, Security and Robustness</em>.</smalll><br></li>
-            <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>International Journal of Computer Vision (IJCV)!</em>.</smalll><br></li>
-            <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
+            <li> <strongsmall>[2023/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>International Journal of Computer Vision (IJCV) [IF: 19.5]</em>!</smalll><br></li>
+            <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI [IF: 24.3]</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>CVPR 2023</em>!</smalll><br></li>
 <!--            <li> <strongsmall>[2022/12]</strongsmall> &nbsp;&nbsp;<smalll>Invited to serve as a Program Committee member of <em>IJCAI 2023</em>!</smalll><br></li>-->
-            <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Signal Processing Letters</em>!</smalll><br></li>
-          <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
+            <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Signal Processing Letters [IF: 3.9]</em>!</smalll><br></li>
+          <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2022 (Oral)</em>!</smalll><br></li>
             <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <em><strong style="color: red;">AI Singapore (AISG) Phd Fellowship</strong> (Top PhD Scholarship in Singapore)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Multimedia (TMM)</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/11]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Multimedia (TMM) [IF: 8.2]</em>!</smalll><br></li>
           <li> <strongsmall>[2021/07]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>ACMMM 2021</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/06]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) [IF: 24.3]</em>!</smalll><br></li>
           <li> <strongsmall>[2021/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2021 (Oral)</em>!</smalll><br></li>
-            <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>Information Sciences</em> and one paper is accepted by <em>IEEE Internet of Things Journal (IoTJ)</em>!</smalll><br></li>
+                        <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Internet of Things Journal (IoTJ) [IF: 10.2]</em>!</smalll><br></li>
+            <li> <strongsmall>[2021/03]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>Information Sciences [IF: 8.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>Our paper "Multi-level Co-Occurrence Graph Convolutional LSTM for Skeleton-Based Action Recognition" received <strong>2020 IEEE Healthcom Best Paper Award</strong> at <em>IEEE International Conference on E-health Networking, Application & Service</em>!</smalll><br></li>
-            <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Internet of Things Journal (IoTJ)</em>!</smalll><br></li>
+            <li> <strongsmall>[2020/12]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Internet of Things Journal (IoTJ) [IF: 9.5]</em>!</smalll><br></li>
             <li> <strongsmall>[2020/10]</strongsmall> &nbsp;&nbsp;<smalll>Awarded <strong>Dean's Research Excellence Scholarship (Special Award)</strong> at Shenzhen Institute of Advanced Technology, Chinese Academy of Sciences (SIAT)!</smalll><br></li>
             <li> <strongsmall>[2020/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2020 (Oral)</em>!</smalll><br></li>
           <p></p>
@@ -210,7 +211,7 @@
        By <strong>Haocong Rao</strong>,
            <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Cyril Leung</a>,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-          <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2023</em> <font color="#6495ed">[First SRID Article in IJCV]</font><br>
+          <em>International Journal of Computer Vision (<strong>IJCV</strong>) 2023 [IF: 19.5]</em> <font color="#6495ed">[First SRID Article in IJCV]</font><br>
      <a href="https://arxiv.org/pdf/2307.12917">[Link]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Code]</a>
      <a href="https://github.com/Kali-Hac/Hi-MPC">[Data]</a>
@@ -218,9 +219,9 @@
         <p></p>
       </td>
     </tr>
-   </tbody></table>	  
+   </tbody></table>
 
-	  
+
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
     <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()">
       <td align="center" width="25%">
@@ -270,7 +271,7 @@
 	 By <strong>Haocong Rao</strong>,
           Yuan Li,
         <a href="https://dr.ntu.edu.sg/cris/rp/rp00084">Chunyan Miao</a><br>
-     <em>IEEE Signal Processing Letters 2022</em><br>
+     <em>IEEE Signal Processing Letters 2022 [IF: 3.9]</em><br>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9913633">[Link]</a>
 <!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:i5ogNWi3beIJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGbhs0:AFWwaeYAAAAAZmGdns18Ej7434bRkbMW_u7yHcQ&scisig=AFWwaeYAAAAAZmGdnir1gmBgmCfV1Zftwk1FauM&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
@@ -347,7 +348,7 @@
       <td valign="top" width="75%">
 	 <strong>A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification</strong><br>
 	 By <strong>Haocong Rao*</strong>, Siqi Wang*, Xiping Hu, Mingkui Tan, Yi Guo, Jun Cheng, Xinwang Liu, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 (Extension of IJCAI 2020 Paper)
+     <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>TPAMI</strong>) 2021 [IF: 24.3] (Extension of IJCAI 2020 Paper)
      </em> <font color="#6495ed">[First SRID Article in TPAMI]</font> <EM><strong><font color="red">(TPAMI Featured Article, ESI Highly Cited Paper)</font></strong></EM><br>
 		<a href="https://ieeexplore.ieee.org/document/9466418">[Link]</a>
          <a href="https://github.com/Kali-Hac/Locality-Awareness-SGE">[Code]</a>
@@ -386,10 +387,27 @@
       <td valign="top" width="75%">
 	 <strong>Augmented Skeleton Based Contrastive Action Learning with Momentum LSTM for Unsupervised Action Recognition</strong><br>
 	 By <strong>Haocong Rao*</strong>, Shihao Xu*, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
-     <em>Information Sciences 2021</em><br>
+     <em>Information Sciences 2021 [IF: 8.5]</em><br>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0020025521003443">[Link]</a>
          <a href="https://github.com/Kali-Hac/AS-CAL">[Code]</a>
          <a href="https://github.com/Kali-Hac/AS-CAL">[Data]</a>
+<!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Jl-F5er8t8cJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYMd0:AFWwaeYAAAAAZmGeKd0N_evvyeshZYJBd8aEOsE&scisig=AFWwaeYAAAAAZmGeKUg_G1pArSptfBGJAPzn1AA&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
+          <br>
+        <p></p>
+      </td>
+    </tr>
+   </tbody></table>
+
+ <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+  <tbody><tr onmouseout="aperture_stop()" onmouseover="aperture_start()"></tr>
+      <tr><td align="center" width="25%">
+        <img src="./images/IoT_overview.jpg" width="140" height="120">
+      </td>
+      <td valign="top" width="75%">
+	 <strong>Internet of Things Enabled Data Fusion Method for Sleep Healthcare Applications</strong><br>
+	 By Fan Yang, Qilu Wu, Xiping Hu, Jiancong Ye, Yuting Yang, <strong>Haocong Rao</strong>, Rong Ma, Bin Hu<br>
+     <em>IEEE Internet of Things Journal (<strong>IoTJ</strong>) 2021 [IF: 10.2]</em><br>
+		<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9383097">[Link]</a>
 <!--         <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:Jl-F5er8t8cJ:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYMd0:AFWwaeYAAAAAZmGeKd0N_evvyeshZYJBd8aEOsE&scisig=AFWwaeYAAAAAZmGeKUg_G1pArSptfBGJAPzn1AA&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
           <br>
         <p></p>
@@ -405,7 +423,7 @@
       <td valign="top" width="75%">
 	 <strong>Prototypical Contrast and Reverse Prediction: Unsupervised Skeleton Based Action Recognition</strong><br>
 	 By Shihao Xu, <strong>Haocong Rao</strong>, Xiping Hu, Jun Cheng, Bin Hu<br>
-     <em>IEEE Transactions on Multimedia (<strong>TMM</strong>) 2021</em><br>
+     <em>IEEE Transactions on Multimedia (<strong>TMM</strong>) 2021 [IF: 8.2]</em><br>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9623511">[Link]</a>
          <a href="https://github.com/Mikexu007/PCRP">[Code]</a>
          <a href="https://github.com/Mikexu007/PCRP">[Data]</a>
@@ -426,7 +444,7 @@
       <td valign="top" width="75%">
       <strong>Attention based Multi-level Co-occurrence Graph Convolutional LSTM for 3D Action Recognition</strong><br>
          By Shihao Xu*, <strong>Haocong Rao*</strong>, Xiping Hu, Jun Cheng, Bin Hu (* Co-First Author)<br>
-     <em>IEEE Internet of Things Journal (<strong>IoTJ</strong>) 2020</em><br>
+     <em>IEEE Internet of Things Journal (<strong>IoTJ</strong>) 2020 [IF: 9.5]</em><br>
      <a href="https://ieeexplore.ieee.org/document/9286840">[Link]</a>
      <a href="https://github.com/Mikexu007/AMCGC-LSTM">[Code]</a>
 <!--     <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:gLVTmfTtiP0J:scholar.google.com/&output=citation&scisdr=ClErLFgYENjS5dGYd6M:AFWwaeYAAAAAZmGeb6NvtvtFSp_poN7dA3RMnGk&scisig=AFWwaeYAAAAAZmGebwIbp0yvit_AhZNwjhg_qPo&scisf=4&ct=citation&cd=-1&hl=zh-CN">[Bibtex]</a>-->
