--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <li> <strongsmall>[2023/03]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI [IF: 24.3]</em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is recognized as <em><strong style="color: red;">ESI Highly Cited Paper</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2023/02]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>CVPR 2023</em>!</smalll><br></li>
 <!--            <li> <strongsmall>[2022/12]</strongsmall> &nbsp;&nbsp;<smalll>Invited to serve as a Program Committee member of <em>IJCAI 2023</em>!</smalll><br></li>-->
-            <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IEEE Signal Processing Letters [IF: 3.9]</em>!</smalll><br></li>
+            <li> <strongsmall>[2022/10]</strongsmall> &nbsp;&nbsp;<smalll>One short paper is accepted by <em>IEEE Signal Processing Letters [IF: 3.9]</em>!</smalll><br></li>
           <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Our <em>TPAMI </em> article "A Self-Supervised Gait Encoding Approach with Locality-Awareness for 3D Skeleton Based Person Re-Identification" is selected as <em><strong style="color: red;">Featured Article (2022 October Issue) of TPAMI</strong></em>!</smalll><br></li>
             <li> <strongsmall>[2022/09]</strongsmall> &nbsp;&nbsp;<smalll>Recognized as <strong>Top Reviewer (3%)</strong> and <strong>Distinguished Program Committee (PC) Member</strong> of <em>IJCAI! </em> </smalll><br></li>
           <li> <strongsmall>[2022/04]</strongsmall> &nbsp;&nbsp;<smalll>One paper is accepted by <em>IJCAI 2022 (Oral)</em>!</smalll><br></li>
