--- a/index.html
+++ b/index.html
@@ -514,6 +514,7 @@
               <li> <stronghuge><STRONG>Distinguished PC Member</STRONG> of IJCAI, 2022</stronghuge><br></li>
               <li> <stronghuge> <STRONG>One ESI Highly Cited Paper & TPAMI Featured Article</STRONG> (2022 October Issue)</stronghuge><br></li>
               <li> <stronghuge><STRONG>AI Singapore (AISG) PhD Fellowship</STRONG> (Top PhD Scholarship in SG), 2022-2025</stronghuge><br></li>
+	      <li> <stronghuge><STRONG>NTU PhD Research Scholarship</STRONG>, 2021</stronghuge><br></li>
               <li> <stronghuge><STRONG>Dean's Research Excellence Scholarship (Special Award)</STRONG> of SIAT, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>IEEE Healthcom Best Paper Award</STRONG>, 2020</stronghuge><br></li>
               <li> <stronghuge><STRONG>Outstanding Undergraduate Thesis Award</STRONG> of SCUT, 2019</stronghuge> <br></li>
