--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="nav-sep">&vert;</div>
     <a href="https://github.com/Kali-Hac" class="nav-item ">Resources</a>
 <!--        <div class="nav-sep">&vert;</div>-->
-<!--       <a href="https://drive.google.com/file/d/1gjrZ01B_DY9OhD874b_qk-1qWr4K7lBG/view?usp=sharing" class="nav-item ">CV</a>-->
-   <a href="https://drive.google.com/file/d/1swZvrYVLowbL_bxEYtCivePeDgQgrSyU/view?usp=drive_link" class="nav-item nav-right">CV</a>
+<!--       <a href="" class="nav-item ">CV</a>-->
+   <a href="https://drive.google.com/file/d/1swZvrYVLowbL_bxEYtCivePeDgQgrSyU/view?usp=sharing" class="nav-item nav-right">CV</a>
   </div>
 </div>
 
