--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                <strong>Military Chess (A Chinese cooperative and tactical game)</strong>：My most playing chess game during my high school. I got the level of
               deputy brigade commander with about 1000 score.
               <br>
-              <strong>Billards</strong>: I like playing billards and have participated in some inter-university competitions.
+              <strong>Billiards</strong>: I like playing billiards and have participated in some inter-university competitions.
               <br>
               <strong>Archery, Rock Climbing, Texas Hold'em</strong>
               <p></p>
